[package]
name = "ort_benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
ort = { version = "=2.0.0-rc.9", features = [
    #"coreml",
    "cuda",
    "directml",
    "tensorrt",
] }
rand = "0.9.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
